# onnxruntime_boilerplate

./: .gitignore  CMakeLists.txt  readme.md  requirements.txt
scripts/: generate_models.py  torch_train_export.py
src/: infer.cpp  torch_train_export.cpp
